# ng-mod

./: test.txt
apps/grafiken/tilesets/: EnnepetalV1.0.tmx  EnnepetalV1.2.tmx  EnnepetalV3.tmx  spr60-1.tsx  spr60Markierungen-1.tsx
apps/ng-mod/: package.json
apps/ng-mod/src/: index.html
apps/py_terminal/pixmaps/: Makefile.in  button-red.xpm  cursor_fht_m.xpm  (+86 more)
apps/testprojekt/: Weichen_control.py  Weichen_test.py  lok_control.py
dok/: Implementierungsschritte.docx  Inventar.ods  Systemarchitektur.odp  Übersicht-Anschlusstabellen.ods
dok/Unser_ses_Pult/: Gleisbildstellpulte.odp  Hbf.odp
pixmaps/: button-black.xpm  button-gray.xpm  cursor_erase_m.xpm  cursor_fht_b.xpm  cursor_mgt_b.xpm  cursor_sgt_b.xpm  cursor_sgt_m.xpm  cursor_urs_b.xpm  cursor_wgt_m.xpm  daemondisconnect.xpm  daemoninfo.xpm  daemonkill.xpm  dkw_links_st2.xpm  dkw_rechts_st2.xpm  dkw_rechts_st3.xpm  drehscheibe_st2.xpm  drehscheibe_st3.xpm  editcopy.xpm  editcut.xpm  entkoppler_st3.xpm  filenew.xpm  filesave.xpm  label-aus-off.xpm  label-ein-on.xpm  label-wgt.xpm  layoutitemerasemode.xpm  layoutnotrot.xpm  layoutstop.xpm  route_locked.xpm  route_unlocked.xpm  route_wflock.xpm  signal_hss_st2.xpm  signal_hss_st3.xpm  spdritem_bld.xpm  spdritem_bs4.xpm  spdritem_bul.xpm  spdritem_cl1.xpm  spdritem_cr4.xpm  spdritem_dbl.xpm  spdritem_dbr.xpm  (+26 more)
protoapps/testprojekt/: Architektur.odt  LokControlBote_test.py  S88Demo.py  Weichen_control.py  coding_practice.py  echtzeit_demo.py  lok_control.py
resource/: Makefile.am  button-yellow.xpm  cursor_erase_b.xpm  cursor_hagt_b.xpm  cursor_rrs_m.xpm  cursor_rzs_m.xpm  cursor_ufgt_m.xpm  cursor_urs_m.xpm  cursor_wht_b.xpm  cursor_wht_m.xpm  cursor_zhs_b.xpm  daemonreset.xpm  dkw_links_st3.xpm  entkoppler_st1.xpm  filequit.xpm  filesaveas.xpm  label-aus-on.xpm  label-mgt.xpm  label-sgt.xpm  route_clear.xpm  route_new.xpm  route_stop.xpm  signal_hs_st3.xpm  signal_vs_st1.xpm  signal_vs_st3.xpm  spdritem_buc.xpm  spdritem_cl3.xpm  spdritem_cr1.xpm  spdritem_cr2.xpm  spdritem_cr3.xpm  spdritem_dtl.xpm  spdritem_dtr.xpm  spdritem_fen.xpm  spdritem_krr.xpm  spdritem_lbr.xpm  spdritem_lsl.xpm  spdritem_sbr.xpm  spdritem_shl.xpm  spdritem_sl3.xpm  spdritem_ssl.xpm  (+18 more)
resource/Markierungen/: WeicheLinksMitte.xcf
src/baustein/: Baustein.py  Gleis.py  Weiche.py  Weichenadresse.py  Weichenstellung.py  WeichenstellungBildLookup.py
src/controller/: FahrstrasseController.py  GleisbelegungController.py  Streckenplaner.py  WeichenstellungController.py  Weichenstellungcontroller.py  ZugController.py
src/main/: Streckenplaner.py  TODO-List.txt  starte_barmen.py  starte_homberge.py  stellpult.py
src/model/: BesetztModul.py  BesetztModulAdresse.py  Fahrstrecke.py  Gleisbelegung.py  Lok.py  Weiche.py
src/serial/: LokControl.py  LokControlBote.py  SerialConnector.py  Signal88Control.py  Signal88ControlBote.py  WeichenControl.py  WeichenControlBote.py  WeichenControlInterface.py  WeichenControlOffline.py
src/util/: Bilder.py  PyTimer.py
src/view/: Baustein.py  BausteinView.py  Gleis.py  GleisView.py  GleisViewSchrauber.py  Gleisschrauber.py  Streckenmaler.py  Weiche.py  WeicheView.py  WeichenstellungBildLookup.py
test/baustein/: Baustein_test.py  Weiche_aendere_weichenstellung_test.py  Weiche_draw_test.py  WeichenstellungBildLookup_test.py
test/controller/: FahrstrasseControler_test.py  GleisbelegungController_test.py  Streckenplaner_test.py  WeichenstellungController_aendere_weichenstellung_test.py  ZugController_test.py  ZugController_update_zug_position_test.py  ZugController_update_zug_speed_test.py
test/main/: main_integrationstest.py  stellpult_integrationstest.py  stellpult_integrationstest_test.py
test/model/: GleisModelSchrauber_test.py  besetz_modul_test.py
test/serial/: LokControlBote_test.py  LokControl_test.py  SerialConnector_test.py  Signal88ControlBote_test.py  Signal88Control_test.py  WeichenControlBote_test.py
test/util/: PyTimer_test.py
test/view/: BausteinView_test.py  Streckenmaler_test.py  WeicheView_aendere_weichenstellung_test.py  WeicheView_draw_test.py  WeicheView_verbindung_zu_model.py  WeichenstellungBildLookup_test.py
(+75 files in other folders)
