# Makefile.am for spdrs60, pixmaps included by cpp-files
# (c) Guido Scholz
# version: $Revision: 1.42 $
# last update: $Date: 2009-03-16 17:38:04 $

EXTRA_DIST = filenew.xpm filesave.xpm fileopen.xpm \
	fileclose.xpm filenewwindow.xpm \
	filequit.xpm filesaveas.xpm \
	editcut.xpm editcopy.xpm editpaste.xpm \
	editfind.xpm editoptions.xpm \
	viewroute.xpm viewfeedback.xpm viewtrainnumber.xpm \
	viewkeyboard.xpm viewclock.xpm viewlayouteditmode.xpm \
	viewnormalmode.xpm viewrouteeditmode.xpm viewfeedbackeditmode.xpm \
	daemonconnect.xpm daemondisconnect.xpm \
	daemoninfo.xpm daemonkill.xpm daemonreset.xpm \
	layoutstart.xpm layoutstop.xpm layoutnotrot.xpm \
	route_locked.xpm route_unlocked.xpm\
	route_clear.xpm route_copy.xpm route_edit.xpm \
	route_new.xpm route_start.xpm \
	route_stop.xpm route_editmode.xpm \
	route_wflock.xpm route_wfunlock.xpm \
	feedback_red.xpm feedback_white.xpm \
	cursor_fht_b.xpm cursor_fht_m.xpm \
	cursor_wgt_b.xpm cursor_wgt_m.xpm \
	cursor_wht_b.xpm cursor_wht_m.xpm \
	cursor_mgt_b.xpm cursor_mgt_m.xpm \
	cursor_ufgt_b.xpm cursor_ufgt_m.xpm \
	cursor_sgt_b.xpm cursor_sgt_m.xpm \
	cursor_hagt_b.xpm cursor_hagt_m.xpm \
	cursor_rzs_b.xpm cursor_rzs_m.xpm \
	cursor_uzs_b.xpm cursor_uzs_m.xpm \
	cursor_zhs_b.xpm cursor_zhs_m.xpm \
	cursor_rrs_b.xpm cursor_rrs_m.xpm \
	cursor_urs_b.xpm cursor_urs_m.xpm \
	cursor_paint_b.xpm cursor_paint_m.xpm \
	cursor_erase_b.xpm cursor_erase_m.xpm \
	tt_goto.xpm tt_left_step.xpm tt_left.xpm tt_prog.xpm \
	tt_right_step.xpm tt_right.xpm tt_stop.xpm tt_turn180.xpm \
	entkoppler_st1.xpm entkoppler_st2.xpm entkoppler_st3.xpm \
	dkw_links_st2.xpm dkw_links_st3.xpm \
	dkw_rechts_st2.xpm dkw_rechts_st3.xpm \
	signal_hss_st1.xpm signal_hss_st2.xpm signal_hss_st3.xpm \
	signal_hs_st1.xpm signal_hs_st2.xpm signal_hs_st3.xpm \
	signal_vs_st1.xpm signal_vs_st2.xpm signal_vs_st3.xpm \
	drehscheibe_st2.xpm drehscheibe_st3.xpm tt_tracks.xpm \
	button-black.xpm button-gray.xpm button-red.xpm \
	button-yellow.xpm label-fht.xpm label-hagt.xpm label-mgt.xpm \
	label-sgt.xpm label-ufgt.xpm label-wgt.xpm label-wht.xpm \
	label-ein-on.xpm label-ein-off.xpm \
	label-aus-on.xpm label-aus-off.xpm \
	transfertable.xpm signal-w.xpm signal-wr.xpm \
	layoutitemerasemode.xpm layoutitempaintmode.xpm \
	layoutitemselectmode.xpm \
	spdritem_bs1.xpm spdritem_bs2.xpm \
	spdritem_bs3.xpm spdritem_bs4.xpm \
	spdritem_buc.xpm spdritem_bul.xpm spdritem_bur.xpm \
	spdritem_cl3.xpm spdritem_cl1.xpm \
	spdritem_cr1.xpm spdritem_cr3.xpm \
	spdritem_dbr.xpm spdritem_dbl.xpm \
	spdritem_dco.xpm spdritem_bld.xpm spdritem_adr.xpm \
	spdritem_dil.xpm spdritem_dir.xpm \
	spdritem_dkl.xpm spdritem_dkr.xpm \
	spdritem_dtr.xpm spdritem_dtl.xpm \
	spdritem_sl1.xpm spdritem_sl3.xpm \
	spdritem_sr1.xpm spdritem_sr3.xpm \
	spdritem_feb.xpm spdritem_fee.xpm spdritem_feg.xpm \
	spdritem_fen.xpm spdritem_fer.xpm spdritem_fey.xpm \
	spdritem_hsr.xpm spdritem_hsl.xpm \
	spdritem_hssr.xpm spdritem_hssl.xpm \
	spdritem_krh.xpm spdritem_krl.xpm spdritem_krr.xpm \
	spdritem_lcr.xpm spdritem_rel.xpm spdritem_mdc.xpm \
	spdritem_txt.xpm \
	spdritem_rbr.xpm spdritem_rbl.xpm \
	spdritem_sbr.xpm spdritem_sbl.xpm \
	spdritem_sdr.xpm spdritem_sdl.xpm \
	spdritem_shr.xpm spdritem_shl.xpm \
	spdritem_ltr.xpm spdritem_ltl.xpm \
	spdritem_lbr.xpm spdritem_lbl.xpm \
	spdritem_lsr.xpm spdritem_lsl.xpm \
	spdritem_tr1.xpm spdritem_tr3.xpm \
	spdritem_tl1.xpm spdritem_tl3.xpm \
	spdritem_ssr.xpm spdritem_ssl.xpm \
	spdritem_syr.xpm spdritem_syl.xpm \
	spdritem_taf.xpm spdritem_tal.xpm \
	spdritem_tas.xpm spdritem_tau.xpm \
	spdritem_twh.xpm spdritem_taw.xpm \
	spdritem_cl4.xpm spdritem_cr4.xpm spdritem_trh.xpm \
	spdritem_tdr.xpm spdritem_tdl.xpm spdritem_tdb.xpm \
	spdritem_tnt.xpm spdritem_trt.xpm \
	spdritem_trv.xpm \
	spdritem_tuh.xpm spdritem_tuv.xpm \
	spdritem_tul.xpm spdritem_tur.xpm \
	spdritem_cl2.xpm spdritem_cr2.xpm \
	spdritem_twr.xpm spdritem_twl.xpm \
	spdritem_vsr.xpm spdritem_vsl.xpm \
	spdritem_wsr.xpm spdritem_wsl.xpm \
	spdritem_zpr.xpm spdritem_zpl.xpm

